@@ -6,6 +6,8 @@
 
         * parse.c: Make sure field in parse_cache() is not used uninitialized.
 
+        * misc.h: Remove the unused COUNT_CHAR_* macro's.
+
 26 Jul 2005 Martin Schlemmer <azarah@gentoo.org>
 
         * depend.c
